[add] Model and State classes. Constructors and basic operations on Model implemented.

--- a/notes/articles_notes.tex
+++ b/notes/articles_notes.tex
@@ -2,7 +2,7 @@
 \documentclass[a4paper, 11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[francais]{babel}
+\usepackage[ncais]{babel}
 \usepackage{fullpage}
 \usepackage{hyperref}
 \usepackage[nonumberlist]{glossaries}
@@ -215,9 +215,4 @@ On ajoute aux probabilités d'émission une valeur constante représentant la fr
 
 \section{\textit{Robust inference of groups in gene expression time-courses using mixtures of HMMs}}
 
-\begin{itemize}
-	\item À quoi correspond $\alpha$ dans le calcul de $p(.\mid \Theta)$ p. 284 ? C'est le poids de chaque composante pdf, mais comment le calculer ?
-	\item Comment calculer la \textit{likelihood function} avec la \textit{mixture} pdf ? $L(O^i \mid \Theta)$ pour tout $i$ ?
-	\item Pour maximiser la \textit{likelihood function} l'EM algorithme est-il effectué seulement sur la \textit{mixture} pdf $p(.\mid\Theta)$ ?
-\end{itemize}
 \end{document}
